# ChessboardCalibration

./: CMakeLists.txt  README.md  main_calibration.cpp  main_charuco_calibration.cpp  main_chessboard_calibration.cpp  main_photo.cpp  main_take_image.cpp
data/calibration/: camera_params.xml  camera_params_charuco.xml
include/: calibrator.hpp  collect.hpp  file_writer.hpp
src/: calibrator.cpp  collect.cpp  file_writer.cpp
